release-1.2/_sources/release-notes/v1.2-release-notes.rst.txt
.. _v1.2-release-notes:

v1.2 Release Notes
==================

Some highlights of this release:

- Taking a step towards global configuration by moving the configuration file
  for :ref:`nginx-stage` to ``/etc/ood/config/nginx_stage.yml`` (we intend on
  migrating all configuration to ``/etc/ood/config`` in the future).
- The developer interface in the Dashboard is dynamically enabled when the
  developer creates the sandbox directory ``~/ondemand/dev`` under their home
  directory.
- To make Interactive App development debugging easier the full command used
  when submitting a batch job is now logged under
  ``/var/log/nginx/<user>/error.log`` on the corresponding OnDemand node.
- A multitude of bugfixes...

Upgrading from v1.1
-------------------

.. warning::

   If updating from a version other than v1.1 it is recommended you walkthrough
   the full :ref:`updating` instructions.

#. You will first need to :ref:`update-pun-utility`.
#. Confirm that you copied your custom :ref:`nginx-stage` YAML configuration
   from::

     /opt/ood/nginx_stage/config/nginx_stage.yml

   to the new global location::

     /etc/ood/config/nginx_stage.yml
#. Finally you will need to walkthrough :ref:`update-apps`.

Infrastructure
--------------

.. _v1.2-infrastructure-versions:
.. list-table:: Infrastructure Component Versions
   :widths: auto
   :header-rows: 1
   :stub-columns: 1

   * - Component
     - Version
   * - `ood-portal-generator`_
     - `0.4.0 <https://github.com/OSC/ood-portal-generator/blob/v0.4.0/CHANGELOG.md>`__
   * - `mod_ood_proxy`_
     - `0.3.1 <https://github.com/OSC/mod_ood_proxy/blob/v0.3.1/CHANGELOG.md>`__
   * - `ood_auth_map`_
     - `0.0.3 <https://github.com/OSC/ood_auth_map/blob/v0.0.3/CHANGELOG.md>`__
   * - `nginx_stage`_
     - 0.2.1 → `0.3.0 <https://github.com/OSC/nginx_stage/blob/v0.3.0/CHANGELOG.md>`__
       (`diff <https://github.com/OSC/nginx_stage/compare/v0.2.1...v0.3.0>`__)

:numref:`v1.2-infrastructure-versions` lists the versions as well as the
previous version it was updated from for each component that make up the
infrastructure for this release.

Applications
------------

.. _v1.2-app-versions:
.. list-table:: Application Versions
   :widths: auto
   :header-rows: 1
   :stub-columns: 1

   * - App
     - Version
   * - `Dashboard App`_
     - 1.17.0 → `1.18.0 <://github.com/OSC/ood-dashboard/blob/v1.18.0/CHANGELOG.md>`__
       (`diff <https://github.com/OSC/ood-dashboard/compare/v1.17.0...v1.18.0>`__)
   * - `Shell App`_
     - 1.2.3 → `1.2.4 <https://github.com/OSC/ood-shell/blob/v1.2.4/CHANGELOG.md>`__
       (`diff <https://github.com/OSC/ood-shell/compare/v1.2.3...v1.2.4>`__)
   * - `Files App`_
     - 1.3.5 → `1.3.6 <https://github.com/OSC/ood-fileexplorer/blob/v1.3.6/CHANGELOG.md>`__
       (`diff <https://github.com/OSC/ood-fileexplorer/compare/v1.3.5...v1.3.6>`__)
   * - `File Editor App`_
     - `1.3.1 <https://github.com/OSC/ood-fileeditor/blob/v1.3.1/CHANGELOG.md>`__
   * - `Active Jobs App`_
     - 1.5.1 → `1.5.2 <https://github.com/OSC/ood-activejobs/blob/v1.5.2/CHANGELOG.md>`__
       (`diff <https://github.com/OSC/ood-activejobs/compare/v1.5.1...v1.5.2>`__)
   * - `Job Composer App`_
     - 2.6.0 → `2.6.1 <https://github.com/OSC/ood-myjobs/blob/v2.6.1/CHANGELOG.md>`__
       (`diff <https://github.com/OSC/ood-myjobs/compare/v2.6.0...v2.6.1>`__)
   * - `Desktops App`_
     - 0.1.1 → `0.1.2 <https://github.com/OSC/bc_desktop/blob/v0.1.2/CHANGELOG.md>`__
       (`diff <https://github.com/OSC/bc_desktop/compare/v0.1.1...v0.1.2>`__)

:numref:`v1.2-app-versions` lists the versions as well as the previous version
it was updated from for each of the system web applications in this release.

All of the above apps are installed and maintained by version 1.2.0 of the
`ood-apps-installer`_ utility.

.. _ood-portal-generator: https://github.com/OSC/ood-portal-generator
.. _mod_ood_proxy: https://github.com/OSC/mod_ood_proxy
.. _ood_auth_map: https://github.com/OSC/ood_auth_map
.. _nginx_stage: https://github.com/OSC/nginx_stage
.. _Dashboard App: https://github.com/OSC/ood-dashboard
.. _Shell App: https://github.com/OSC/ood-shell
.. _Files App: https://github.com/OSC/ood-fileexplorer
.. _File Editor App: https://github.com/OSC/ood-fileeditor
.. _Active Jobs App: https://github.com/OSC/ood-activejobs
.. _Job Composer App: https://github.com/OSC/ood-myjobs
.. _Desktops App: https://github.com/OSC/bc_desktop
.. _ood-apps-installer: https://github.com/OSC/ood-apps-installer
